<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_01"
    tools:context="company.csf2017.com.chenjian.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="幼儿晨检系统"
        android:id="@+id/title"
        android:textSize="24dp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请选择你的身份："
        android:textColor="#FF6434"
        android:id="@+id/textView"
        android:textSize="22dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:layout_weight="0.18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:layout_width="107dp"
            android:layout_height="107dp"
            android:id="@+id/btn1"
            android:text="@string/department"
            android:background="@drawable/shape"
            android:layout_marginLeft="60dp"
            android:backgroundTint="@color/backgroundColor1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14dp" />
        <Button
            android:layout_width="107dp"
            android:layout_height="107dp"
            android:id="@+id/btn2"
            android:text="@string/parents"
            android:background="@drawable/shape"
            android:layout_marginLeft="30dp"
            android:layout_gravity="right"
            android:backgroundTint="@color/backgroundColor2"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:layout_width="107dp"
            android:layout_height="107dp"
            android:id="@+id/btn3"
            android:text="@string/teachers"
            android:background="@drawable/shape"
            android:layout_marginLeft="60dp"
            android:backgroundTint="@color/backgroundColor3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16dp" />
        <Button
            android:layout_width="107dp"
            android:layout_height="107dp"
            android:id="@+id/btn4"
            android:text="@string/doctors"
            android:background="@drawable/shape"
            android:layout_marginLeft="30dp"
            android:layout_gravity="right"
            android:backgroundTint="@color/backgroundColor4"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>
